# scripts-usuario

./: README.md
rofi_alias_mgr/: README.md  compilar_e_mover.sh  criar_executavel_e_mover.sh  pyproject.toml  rofi_alias_mgr.py
rofi_alias_mgr/arquivos_exemplo/: rodar-inotifywait.sh  rofi-shell.sh
rofi_alias_mgr/src/: arquivos.py  comandos.py  constantes.py  datas.py  manipulacao_dados.py  textos.py  tipos.py
rofi_alias_mgr/tests/: conftest.py  test_arquivos.py  test_datas.py  test_rofi_alias_mgr.py
rofi_extra_programs/: README.md  compilar_e_mover.sh  pyproject.toml  rofi_extra_programs.py
rofi_extra_programs/src/: arquivos.py  processos.py  tipos.py
scripts_sway/: README.MD  main.py  pyproject.toml
scripts_sway/src/: binding.py  cli.py  commands.py  consts.py  errors.py  files.py  group_format_window.py  sway_manager.py  types_project.py  utils.py  windows.py
scripts_sway/tests/: test_binding.py  test_group_format_window.py  test_sway_manager.py  test_types_project.py  test_windows.py
