[tool.poetry]
name = "rofi_alias_mgr"
version = "0.1.0"
description = ""
authors = ["."]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyinstaller = "^6.13.0"
rich = "^14.0.0"
click = "^8.1.8"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
