[project]
name = "scripts-sway"
version = "0.1.0"
description = ""
authors = [
    {name = "."}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "click (>=8.2.0,<9.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "i3ipc (>=2.2.1,<3.0.0)",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.1"
